# NPU-rs

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: full_inference_pipeline.rs
packaging/fedora/: npu-rs.spec
src/: compute.rs  device.rs  error.rs  execution.rs  lib.rs  main.rs  memory.rs  model.rs  optimizer.rs  perf_monitor.rs  power.rs  profiler.rs  quantization.rs  tensor.rs
