[package]
name = "npu-rs"
version = "0.1.0"
edition = "2021"
authors = ["KushalMeghani1644 kushalmeghani108.com"]
description = "A NPU driver for RISCV boards"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/KushalMeghani1644/NPU-rs"
homepage = "https://github.com/KushalMeghani1644/NPU-rs"
keywords = ["rust", "example", "cli"]
categories = ["command-line-utilities", "development-tools"]   
exclude = [".github/*", "target/*"]                          

[dependencies]
ndarray = "0.16.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
parking_lot = "0.12"
num_cpus = "1.16"

[features]
default = []
simulation = []
